explores inheritance and test